# etsy-python-sdk

./: .gitignore  Makefile  README.md  VERSION  pyproject.toml
.github/workflows/: generate-sdk.yml  tag-generated-sdk.yml
generator-config/: openapi-generator-config.yaml
openapi/: etsy-openapi.json
src/: etsy_python_sdk_README.md
src/etsy_python_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/etsy_python_sdk/.openapi-generator/: FILES
src/etsy_python_sdk/api/: __init__.py  buyer_taxonomy_api.py  ledger_entry_api.py  other_api.py  payment_api.py  review_api.py  seller_taxonomy_api.py  shop_api.py  shop_holiday_preferences_api.py  shop_listing_api.py  shop_listing_file_api.py  shop_listing_image_api.py  shop_listing_inventory_api.py  shop_listing_offering_api.py  shop_listing_product_api.py  shop_listing_translation_api.py  shop_listing_variation_image_api.py  shop_listing_video_api.py  shop_production_partner_api.py  shop_receipt_api.py  shop_receipt_transactions_api.py  shop_return_policy_api.py  shop_section_api.py  shop_shipping_profile_api.py  user_address_api.py  user_api.py
src/etsy_python_sdk/docs/: BuyerTaxonomyApi.md  BuyerTaxonomyNode.md  BuyerTaxonomyNodeProperties.md  BuyerTaxonomyNodeProperty.md  BuyerTaxonomyNodes.md  BuyerTaxonomyPropertyScale.md  BuyerTaxonomyPropertyValue.md  ErrorSchema.md  LedgerEntryApi.md  ListingImage.md  ListingImages.md  ListingInventory.md  ListingInventoryProduct.md  ListingInventoryProductOffering.md  ListingInventoryWithAssociations.md  ListingPropertyValue.md  ListingReview.md  (+89 more)
(+188 files in other folders)
